<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="native_crashed">Sorry, PHEM encountered a problem with the emulator and had to close. Would you like to send a crash report, which may help the author to fix the problem?</string>
    <string name="reset_state">Reset state and preferences</string>
    <string name="report">Report</string>
    <string name="close">Close</string>
    <string name="crashtitle">Darn it all&#8230;</string>
    <string name="getting_log">Getting log&#8230;</string>
    <string name="starting_email">Starting email client&#8230;</string>
    <string name="author_email">phem-crash@perpendox.com</string>
    <string name="crash_subject">Crash: PHEM v{0} on {1} / {2} / {3}</string>
    <string name="crash_preamble">Please describe what you were doing just before the crash if possible, and then press Send:</string>
    <string name="get_log_failed">Could not read the log. Please try sending an ordinary bug report to {0}, describing what you did and what happened, and I may still be able to help you.</string>
    <string name="unknown_version">UNKNOWN</string>

    <string name="app_name">PHEM</string>
    <string name="action_settings">Advanced Settings</string>
    <string name="no_sdcard_title">No external storage?</string>
    <string name="no_sdcard">Unable to read external storage. Most likely, it is mounted as a drive to a desktop. Unmount it and restart PHEM.</string>
    <string name="quit">Quit</string>
    <string name="no_roms_title">No ROMS found</string>
    <string name="no_roms_found">PHEM requires at least one Palm ROM image to run. ROM images generally have a \'.rom\' extension, for example \'palmos40&#8209;en&#8209;m505.rom\'. They should be placed in: </string>
    <string name="service_name">PHEMSoundService</string>
    <string name="notify_app_shutdown">PHEM shutting down, saving state.</string>
    <string name="cannot_make_dirs">Cannot find/create PHEM directories for ROMs, skins, save files. Perhaps storage is not writeable?</string>
    <string name="cannot_make_dirs_title">Cannot make directories.</string>
    <string name="prc_chooser_title">Choose a PRC (program) or PDB (data) file</string>
    <string name="reset_title">Reset</string>
    <string name="soft_reset_title">Soft Reset</string>
    <string name="hard_reset_title">Hard Reset</string>
    <string name="install_file_title">Install File</string>
    <string name="input_menu_title">Input Method</string>
    <string name="spintext">Default Spin Text</string>
    <string name="donebutn_txt">Done</string>
    <string name="session_mgt_title">Session</string>
    <string name="no_session_title">No Session</string>
    <string name="no_session_text">No emulation session has been created. Please choose \'Session\' from the menu to create a new session.</string>
    <string name="ok">OK</string>
    <string name="no_device_title">No valid devices found!</string>
    <string name="no_device_text">No devices found that are compatible with the selected ROM image. Please select a different ROM image.</string>
    <string name="no_memory_title">No valid memory sizes found!</string>
    <string name="no_memory_text">No valid memory configurations found for the specified ROM and Device. Please select a different Device and/or ROM image.</string>
    <string name="session_create_label">Create Emulation Session</string>
    <string name="load_error_text">Error loading file. Confirm that it is a loadable Palm file.</string>
    <string name="load_error_title">File Load Error!</string>
    <string name="new_session_butn_txt">New Session</string>
    <string name="load_session_butn_txt">Load Session</string>
    <string name="save_session_butn_txt">Save Session</string>
    <string name="new_session_blurb">Create a new emulation session.</string>
    <string name="load_session_blurb">Load a previous emulation session.</string>
    <string name="save_session_blurb">Save a session for later loading.</string>
    <string name="session_mgmt_label">Manage Sessions</string>
    <string name="session_save_label">Save Session</string>
    <string name="savebutn_txt">Save</string>
    <string name="empty_filename_title">No File Specified!</string>
    <string name="empty_filename">Please specify a session file to save to!</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite_file_title">Overwrite File?</string>
    <string name="overwrite_file_text">A file of the same name already exists. Overwrite?</string>
    <string name="card_emu_title">Card Emulation</string>
    <string name="about_title_text">PHEM v</string>
    <string name="title_activity_card__mgmt">Card Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="install_hostfs_text">To emulate card storage, a &quot;HostFS&quot; library must be installed into the emulated Palm. This button will install the required library and soft-reset the Palm to enable it. Then return to the Card Emulation page to complete the setup.</string>
    <string name="card_emu_label">Card Storage Emulation</string>
    <string name="emulator_alert_title">Emulator Alert</string>
    <string name="emulator_reset_title">Reset Emulator</string>
    <string name="status_session_label">Session:</string>
    <string name="status_rom_label">Rom:</string>
    <string name="status_dev_label">Device:</string>
    <string name="status_ram_label">RAM:</string>
    <string name="status_title">Session Details</string>
    <string name="about_title">About PHEM</string>
    <string name="none" />
    <string name="about_blurb">PHEM emulates the hardware of a variety of Palm Pilot PDAs that use the Motorola 68K (M68k) CPU.</string>
    <string name="derived_blurb">PHEM is based on the Palm OS Emulator, a debugging and development tool originally created by Greg Hewgill and later developed by Palm, Inc.</string>
    <string name="source_blurb">&lt;html>&lt;a href="http://perpendox.com/phem/source.html">Source code available under the GPL.&lt;/a>&lt;/html></string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soft_reset_blurb">A soft reset is the same as inserting a pin in the reset hole on a device.  It performs a standard reboot.</string>
    <string name="noext_reset_blurb">This is the same as a Soft Reset while holding down the Page Up key. It reboots and skips the loading of most extensions.</string>
    <string name="hard_reset_blurb">This is the same as a Soft Reset while holding down the Power key. It ERASES the storage heap. (FACTORY RESET!)</string>
    <string name="noext_reset_butn_txt">No-Extension Reset</string>
    <string name="soft_reset_butn_txt">Soft Reset</string>
    <string name="hard_reset_butn_txt">Hard Reset</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="power_title">Power</string>
    <string name="settings_title">Advanced Settings</string>
    <string name="enable_sound_blurb">Enable Sound</string>
    <string name="enable_net_blurb">Enable Network</string>
    <string name="enable_ab_blurb">Enable Action Bar</string>
    <string name="use_hwkeys_blurb">Use Vol Up/Down to Scroll</string>
    <string name="smooth_pixel_blurb">Number of pixels a touch must move to register a new event:</string>
    <string name="smooth_period_blurb">Milliseconds to wait before sending a repeat event:</string>
    <string name="update_interval_blurb">Screen updates per second:</string>
    <string name="apply">Apply</string>
    <string name="enable_landscape_blurb">Enable Landscape Orientation</string>
    <string name="mount_cb_blurb">Mounted</string>
    <string name="smooth_blurb">Touch Smoothing</string>
    <string name="update_blurb">Refresh Rate</string>
    <string name="rom_label">ROM</string>
    <string name="device_label">Device</string>
    <string name="ram_label">RAM (KB)</string>
    <string name="install_hostfs_butn_txt">Install HostFS</string>
    <string name="card_dir_label">Card Storage Directory:</string>
    <string name="acronym_text">Palm Hardware Emulator M68k</string>
    <string name="support_email_addr">phem-support@perpendox.com</string>
    <string name="phem_site_addr">http://www.perpendox.com/phem/</string>
    <string name="perpendox_link">&lt;html>&lt;a href="http://perpendox.com/">Perpendox Software, LLC&lt;/a>&lt;/html></string>
    <string name="choose_reset_type">Choose Reset Type:</string>
    <string name="double_scale_blurb">High Resolution Skins</string>
    <string name="title_activity_crash_handler">CrashHandlerActivity</string>
    <string name="session_name_text">Session Name:</string>
    <string name="rate_txt">Rate PHEM!</string>
    <string name="review_check_failed">Review Authorization Failed</string>
    <string name="sync_title">HotSync Name:</string>
    <string name="parent_dir_label">Parent Directory</string>
    <string name="current_dir_label">Current Directory</string>
    <string name="palm_codepage">CP1252</string>
    <string name="serial_blurb">Serial Port</string>
    <string name="serial_dev_label">Device File</string>
    <string name="gps_pass_blurb">Send GPS data to Palm</string>
    <string name="gps_filter_blurb">Filter non-GPS data (GLONASS, etc.)</string>
    <string name="corrupt_session_title">Corrupt Session File</string>
    <string name="corrupt_session_msg1">Corruption detected in session file: "</string>
    <string name="corrupt_session_msg2">" Unfortunately, a new session must be chosen or created.</string>
</resources>
