<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/native_crashed"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/forget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:checked="true"
        android:text="@string/reset_state" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp" >

        <Button
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>